# ngs-containers

./: .dockerignore  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
containers/base/: Dockerfile  environment.yaml
containers/cutadapt/: Dockerfile  environment.yaml
ngs_core/: logging_setup.py  wrapper.py
workflows/: main.nf  nextflow.config
