# pyproject.toml

[project]
name = "ngs-core"
version = "0.1.0"
description = "NGS analysis pipeline"
readme = "README.md"
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "cyvcf2>=0.31.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pysam>=0.23.3",
    "seaborn>=0.13.2",
    "structlog>=25.4.0",
    "typer>=0.17.4",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.7.2"]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.13.0",
]

[project.scripts]
ngs-core-wrap = "ngs_core.wrapper:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ngs_core"]
